Added featured projects section and projectcard template

--- a/components/nav-bar.html
+++ b/components/nav-bar.html
@@ -15,9 +15,9 @@
         <div class="nav-bar">
             <span class="logo"><a href="index.html">KW</a></span>
             <ul class="nav-items">
-                <li class="nav-item"><a href="index.html">About</a></li>
-                <li class="nav-item"><a href="work.html">Work</a></li>
-                <li class="nav-item"><a href="contact.html">Contact</a></li>
+                <li class="nav-item"><a href="index.html">about</a></li>
+                <li class="nav-item"><a href="work.html">projects</a></li>
+                <li class="nav-item"><a href="contact.html">contact</a></li>
             </ul>
         </div>
         <div class="hamburger-icon" onclick="toggleMenu(this)">
