added light and dark mode toggle

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,21 @@
 :root {
   --padding-main: 5rem;
-  --color-text: #555;
-  --color-primary: #333;
-  --color-secondary: #222;
-  --color-accent: #444;
+}
+
+.light-mode {
+  --color-background: #f3efe3;
+  --color-text: #293946;
+  --color-primary: #bf873a;
+  --color-secondary: #d49785;
+  --color-accent: #a06347;
+}
+
+.dark-mode {
+  --color-background: #1e2a33;
+  --color-text: #f3efe3;
+  --color-primary: #d49785;
+  --color-secondary: #e9d785;
+  --color-accent: #aebfc6;
 }
 
 *,
@@ -25,7 +37,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.4rem;
+  font-size: 2.6rem;
   margin: 20px 0;
 }
 
@@ -57,7 +69,7 @@ a:before {
   display: block;
   width: 100%;
   height: 2px;
-  background-color: var(--color-accent);
+  background-color: var(--color-primary);
   position: absolute;
   left: 0;
   bottom: -2px;
@@ -71,17 +83,23 @@ a:hover:before {
 }
 
 /* GENERAL */
+html {
+  background-color: var(--color-background);
+  color: var(--color-text);
+  border: 10px solid var(--color-primary);
+}
+
 body {
-  max-width: 750px;
+  max-width: 850px;
   margin: 0 auto;
   padding: var(--padding-main);
 }
 
 section:after {
   content: "";
-  width: 50px;
+  width: 80px;
   height: 2px;
-  background-color: var(--color-accent);
+  background-color: var(--color-primary);
   display: inline-block;
   margin-top: 5rem;
 }
@@ -108,7 +126,7 @@ header a:before {
 .bar {
   width: 28px;
   height: 3px;
-  background-color: black;
+  background-color: var(--color-text);
   margin: 8px 0;
   transition: transform 0.4s;
 }
@@ -135,6 +153,12 @@ header a:before {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--color-background);
+  z-index: 1000;
 }
 
 .nav-bar-collapsible--open .logo {
@@ -149,7 +173,15 @@ header a:before {
   font-size: 2rem;
 }
 
-@media screen and (min-width: 750px) {
+.nav-bar-collapsible--open .nav-item a {
+  font-size: 4rem;
+}
+
+.nav-bar-collapsible--open .nav-item {
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 650px) {
   .hamburger-icon {
     display: none;
   }
@@ -158,13 +190,13 @@ header a:before {
     display: flex;
     flex-direction: row;
     height: 6rem;
-    width: 400px;
+    width: 500px;
     align-items: center;
   }
 
   .logo {
     display: flex;
-    background-color: var(--color-text);
+    background-color: var(--color-secondary);
     width: 5rem;
     height: 5rem;
     margin-right: 5rem;
@@ -173,7 +205,7 @@ header a:before {
   }
 
   .logo a {
-    color: white;
+    color: var(--color-background);
     border-bottom: none;
   }
 
@@ -186,7 +218,86 @@ header a:before {
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
+    margin-right: 5rem;
   }
+}
+
+/* DARK MODE TOGGLE */
+.switch {
+  display: flex;
+  height: 27px;
+  position: relative;
+  width: 50px;
+  top: 3px;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  background-color: var(--color-background);
+  border: 1px solid var(--color-text);
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.4s;
+}
+
+.slider:before {
+  background-color: var(--color-text);
+  border: 1px solid var(--color-text);
+  bottom: 2px;
+  content: "";
+  height: 20px;
+  width: 20px;
+  left: 3px;
+  position: absolute;
+  transition: 0.4s;
+  z-index: 1000;
+}
+
+input:checked + .slider {
+  /* background-color: var(--color-background); */
+}
+
+input:checked + .slider:before {
+  transform: translateX(22px);
+  /* border-color: #cfcfcf;
+  background-color: #efefef; */
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.toggle-moon,
+.toggle-sun {
+  /* width: 50%; */
+  height: 20px;
+  width: 20px;
+  text-align: center;
+  padding: 0.25em;
+  position: relative;
+  top: 3px;
+  left: 5px;
+  z-index: 420;
+}
+
+.toggle-moon {
+  left: 7px;
+}
+
+.toggle-moon svg,
+.toggle-sun svg {
+  fill: var(--color-secondary);
 }
 
 /* PROJECTS */
