added emphasis to important words in projects, minor bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ li {
   font-size: 1.8rem;
   font-family: "Lato", sans-serif;
   margin: 10px 0;
+  line-height: 2.5rem;
 }
 
 a {
@@ -81,6 +82,13 @@ a:before {
 
 a:hover:before {
   transform: scale(1);
+}
+
+em {
+  text-transform: uppercase;
+  font-style: normal;
+  color: var(--color-primary);
+  font-weight: bold;
 }
 
 /* GENERAL */
@@ -208,6 +216,10 @@ svg:hover {
   fill: var(--color-secondary);
 }
 
+.nav-bar-collapsible--open .social-links {
+  display: none;
+}
+
 @media screen and (min-width: 650px) {
   .hamburger-icon {
     display: none;
@@ -277,7 +289,7 @@ svg:hover {
   position: absolute;
   right: 0;
   top: 0;
-  transition: 0.4s;
+  transition: transform 0.4s;
 }
 
 .slider:before {
@@ -289,7 +301,7 @@ svg:hover {
   width: 20px;
   left: 3px;
   position: absolute;
-  transition: 0.4s;
+  transition: transform 0.4s;
   z-index: 1000;
 }
 
@@ -366,6 +378,10 @@ footer {
 }
 
 /* PROJECT DETAILS */
+.technologies {
+  margin-bottom: 10px;
+}
+
 .technologies li {
   font-size: 1.8rem;
   color: var(--color-primary);
@@ -374,7 +390,6 @@ footer {
   display: inline-block;
   padding-right: 1rem;
   margin: 0;
-  margin-bottom: 10px;
   font-style: italic;
 }
 
