--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
 /* FONTS */
 html {
   font-size: 62.5%;
-  font-family: "Playfair Display", serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 h1 {
